Problem: loading constructs is impossible
Solution: implement Environment.load

--- a/clips/Cargo.toml
+++ b/clips/Cargo.toml
@@ -6,3 +6,7 @@ authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
 [dependencies]
 clips-sys = { path = "../clips-sys" }
 enum_primitive = "0.1"
+derive-error = "0.0.4"
+
+[dev-dependencies]
+tempfile = "2.2"
